# clubhub

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Procfile  README.md  SLACKBOT.md  pyproject.toml  requirements.txt
api_test/: clubhouse_webook.http  gitlab_webhook.http
clubhouse_lib/: client.py
clubhub/: actions.py  app.py  clubhouse.py  gitlab.py  settings.py  slack.py  wsgi.py
